...
                    android:text="@{addNoteViewModel.noteLength}"
                    />

                <EditText
                    android:layout_below="@+id/text_note_length"
                    style="@style/InputText"
                    android:id="@+id/edittext_add_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_enter_note"
                    android:minLines="8"
                    android:gravity="top"
                    android:maxLength="300"
...
